images and pages linking

--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
     </head>
     <body>
         Image Gallery
+        <a href="dolphin.html">Dolphin</a> <br>
+        <a href="Lion.html">Lion</a> <br>
+        <a href="elephant.html">Elephant</a> <br>
+        <a href="rabbit.html">Rabbit</a> <br>
     </body>
 </html>
