fixed broken paths

--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
         <title>Image Gallery</title>
     </head>
     <body>
-        Image Gallery
-        <a href="dolphin.html">Dolphin</a> <br>
-        <a href="Lion.html">Lion</a> <br>
-        <a href="elephant.html">Elephant</a> <br>
-        <a href="rabbit.html">Rabbit</a> <br>
+       <h1> Image Gallery</h1>
+        <img src="./images/dolphin.png" height="50px" />
+        <a href="./pages/dolphin.html">Dolphin</a> <br> <br>
+
+        <img src="./images/lion.png" height="50px"/>
+        <a href="./pages/Lion.html">Lion</a> <br> <br>
+
+        <img src="./images/elephant.png" height="50px"/>
+        <a href="./pages/elephant.html">Elephant</a> <br><br>
+
+        <img src="./images/rabbit.png" height="50px"/>
+        <a href="./pages/rabbit.html">Rabbit</a> <br><br>
     </body>
 </html>
