--- a/pages/Lion.html
+++ b/pages/Lion.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>Lion</h1>
-        <img src="lion.png" height="300px"/>
+        <img src="./../images/lion.png" height="300px"/>
     </body>
 </html>
