--- a/pages/dolphin.html
+++ b/pages/dolphin.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>Dolphin</h1>
-        <img src="dolphin.png" height="300px" />
+        <img src="./../images/dolphin.png" height="300px" />
     </body>
 </html>
