--- a/pages/elephant.html
+++ b/pages/elephant.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>Elephant</h1>
-        <img src="elephant.png" height="300px" />
+        <img src="./../images/elephant.png" height="300px" />
     </body>
 </html>
