--- a/pages/rabbit.html
+++ b/pages/rabbit.html
@@ -5,6 +5,8 @@
     </head>
     <body>
         <h1>Rabbit</h1>
-        <img src="rabbit.png" height="300px"/>
+        <img src="./../images/rabbit.png" height="300px"/>
+        <br>
+        <a href="./../index.html">Back to home</a>
     </body>
 </html>
